chore: implementation of brand text

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,4 @@
+<app-brand-text></app-brand-text>
 <button (click)="fetchLocations()">carregar</button>
 <div *ngIf="locations$ | async as locations">
   <p> {{ locations | json }} </p>
