--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,5 @@
 <app-brand-text></app-brand-text>
+<app-time-picker></app-time-picker>
 <button (click)="fetchLocations()">carregar</button>
 <div *ngIf="locations$ | async as locations">
   <p> {{ locations | json }} </p>
