--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@use "./scss/fonts" as *;
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Gotham", sans-serif;
+  line-height: 1.5;
 }
