--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
   font-family: "Gotham";
-  src: url("/public/fonts/gotham-light.woff2");
+  src: url("/fonts/gotham-light.woff2");
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Gotham";
-  src: url("/public/fonts/gotham-book.woff2");
+  src: url("/fonts/gotham-book.woff2");
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Gotham";
-  src: url("/public/fonts/gotham-bold.woff2");
+  src: url("/fonts/gotham-bold.woff2");
   font-weight: 700;
 }
 
 @font-face {
   font-family: "Gotham";
-  src: url("/public/fonts/gotham-black.woff2");
+  src: url("/fonts/gotham-black.woff2");
   font-weight: 900;
 }
