--- a/src/app/features/home/components/time-picker/time-picker.component.html
+++ b/src/app/features/home/components/time-picker/time-picker.component.html
@@ -7,21 +7,39 @@
   <div class="time-options">
     <div class="option">
       <div class="option-control">
-        <input type="radio" id="morning" name="time" value="06h" [formControl]="timeForm.controls.time" />
+        <input
+          type="radio"
+          id="morning"
+          name="time"
+          value="06h"
+          [formControl]="timeForm.controls.time"
+        />
         <label for="morning">Manhã</label>
       </div>
       <p>06:00 ás 12:00</p>
     </div>
     <div class="option">
       <div class="option-control">
-        <input type="radio" id="afternoon" name="time" value="12h" [formControl]="timeForm.controls.time"/>
+        <input
+          type="radio"
+          id="afternoon"
+          name="time"
+          value="12h"
+          [formControl]="timeForm.controls.time"
+        />
         <label for="afternoon">Tarde</label>
       </div>
       <p>12:00 ás 18:00</p>
     </div>
     <div class="option">
       <div class="option-control">
-        <input type="radio" id="night" name="time" value="18h" [formControl]="timeForm.controls.time"/>
+        <input
+          type="radio"
+          id="night"
+          name="time"
+          value="18h"
+          [formControl]="timeForm.controls.time"
+        />
         <label for="night">Noite</label>
       </div>
       <p>18:00 ás 23:00</p>
@@ -29,7 +47,11 @@
   </div>
   <div class="incremental-options">
     <div class="closed-gym">
-      <input type="checkbox" id="closed-gym" [formControl]="timeForm.controls.closedGyms" />
+      <input
+        type="checkbox"
+        id="closed-gym"
+        [formControl]="timeForm.controls.closedGyms"
+      />
       <label for="closed-gym">Exibir unidades fechadas</label>
     </div>
     <p>
