--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -4,4 +4,9 @@
   flex-direction: column;
   gap: 20px;
   margin: 40px auto;
+  .gym-cards {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
 }
