chore: clear form

--- a/src/app/features/home/components/time-picker/time-picker.component.html
+++ b/src/app/features/home/components/time-picker/time-picker.component.html
@@ -63,6 +63,6 @@
   </div>
   <div class="buttons">
     <button id="find" type="submit">ENCONTRAR UNIDADE</button>
-    <button id="clear">Limpar</button>
+    <button id="clear" (click)="clear()">Limpar</button>
   </div>
 </form>
