feat: gym protections legend component

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,6 @@
 <app-brand-text></app-brand-text>
 <app-time-picker></app-time-picker>
+<app-gym-protections></app-gym-protections>
 <div class="gym-cards">
   <ng-container *ngIf="locations$ | async as locations">
     <ng-container *ngFor="let location of locations.locations">
