--- a/src/app/features/home/components/gym-protections/gym-protections.component.scss
+++ b/src/app/features/home/components/gym-protections/gym-protections.component.scss
@@ -18,6 +18,11 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    gap: 10px;
+    h2 {
+      font-weight: 900;
+      font-size: 18px;
+    }
     .legend {
       display: inherit;
       gap: 10px;
